Fix Dark Mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,22 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 8, 8, 8;
-  }
+[data-theme='dark'] {
+  --foreground-rgb: 255, 255, 255;
+  --background-rgb: 8, 8, 8;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+}
+@layer base{
+  body {
+      @apply dark:bg-gray-800 bg-white
+  }
+  th, td{
+    @apply dark:text-white
+  }
+  input {
+    @apply dark:bg-white
+  }
 }
 
 @layer utilities {
@@ -25,3 +33,4 @@ body {
     text-wrap: balance;
   }
 }
+
